Added Experimental Support for Minecraft 1.21.11 and lower version.